--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Blueprints/GM_SideScroller.GM_SideScroller_C
+GlobalDefaultGameMode=/Game/Maps/GM_Menu.GM_Menu_C
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameInstanceClass=/Game/Blueprints/BP_Instance.BP_Instance_C
 
